--- a/src/app/components/brands/brands.component.html
+++ b/src/app/components/brands/brands.component.html
@@ -1,1 +1,32 @@
-<p>brands works!</p>
+<section class="brands py-5">
+  
+      <div class="row row-gap-4">
+        <div *ngFor="let brand of brands | paginate: { id: 'brandsPagination',
+        itemsPerPage: pageSize,
+        currentPage: currentPage,
+        totalItems: total }" class="col-md-3">
+          <div class="card text-center">
+            <img class="card-img-top" [src]="brand.image" alt="brand" />
+            <div class="card-body">
+              <h5 class="card-title">{{ brand.name }}</h5>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+      <div class="d-flex justify-content-center mt-4">
+        <pagination-controls  id="brandsPagination"
+        (pageChange)="pageChanged($event)"
+        (pageBoundsCorrection)="pageChanged($event)"
+        [maxSize]="9"
+        [directionLinks]="true"
+        [autoHide]="true"
+        [responsive]="true"
+        previousLabel="Previous"
+        nextLabel="Next"
+        screenReaderPaginationLabel="Pagination"
+        screenReaderPageLabel="page"
+        screenReaderCurrentLabel="You're on page">
+      </pagination-controls>
+       </div>
+  </section>
