--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,7 +1,10 @@
 <section class="py-4">
 
     <div class="row g-4 ">
-        <div *ngFor="let product of productList" class="col-sm-6 col-md-4 col-lg-3 col-xxl-2">
+        <div *ngFor="let product of productList | paginate: { id: 'productPagination',
+        itemsPerPage: pageSize,
+        currentPage: currentPage,
+        totalItems: total }" class="col-sm-6 col-md-4 col-lg-3 col-xxl-2">
             <div class="product h-100">
 
               <div role="button" [routerLink]="['/productdetails',product._id]">
@@ -24,5 +27,21 @@
             </div>
         </div>
     </div>
+
+ <div class="d-flex justify-content-center mt-4">
+  <pagination-controls  id="productPagination"
+  (pageChange)="pageChanged($event)"
+  (pageBoundsCorrection)="pageChanged($event)"
+  [maxSize]="9"
+  [directionLinks]="true"
+  [autoHide]="true"
+  [responsive]="true"
+  previousLabel="Previous"
+  nextLabel="Next"
+  screenReaderPaginationLabel="Pagination"
+  screenReaderPageLabel="page"
+  screenReaderCurrentLabel="You're on page">
+</pagination-controls>
+ </div>
 
 </section>
